healthcard added along with some changes to player